[tool.poetry]
name = "kyoushi-statemachines"
version = "0.4.1"
description = ""
authors = ["Maximilian Frank <maximilian.frank@ait.ac.at>"]
license = "MIT"
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/ait-aecid/kyoushi-statemachines"
homepage = "https://ait-aecid.github.io/kyoushi-statemachines"
packages = [
  { include = "cr_kyoushi", from = "src" }
]


[tool.poetry.plugins."kyoushi.simulation"]
"ait.web_browser" = "cr_kyoushi.statemachines.web_browser:StatemachineFactory"
"ait.horde_user" = "cr_kyoushi.statemachines.horde_user:StatemachineFactory"
"ait.wordpress_wpdiscuz" = "cr_kyoushi.statemachines.wordpress_wpdiscuz:StatemachineFactory"
"ait.wordpress_editor" = "cr_kyoushi.statemachines.wordpress_editor:StatemachineFactory"
"ait.owncloud_user" = "cr_kyoushi.statemachines.owncloud_user:StatemachineFactory"
"ait.ssh_user" = "cr_kyoushi.statemachines.ssh_user:StatemachineFactory"
"ait.beta_user" = "cr_kyoushi.statemachines.beta_user:StatemachineFactory"
"ait.aecid.attacker.wpdiscuz" = "cr_kyoushi.statemachines.aecid_attacker:StatemachineFactory"

[tool.poetry.dependencies]
python = "^3.7"
kyoushi-simulation = "^0.3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.2.2"
Faker = "^5.6.5"
titlecase = "^2.0.0"
numpy = "^1.19.5"
email-validator = "^1.1.2"
idna = "^2.8"
pwntools = "^4.3.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pre-commit = "^2.9.0"
black = "^20.8b1"
mypy = "^0.790"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.5.1"
isort = "^5.7.0"
pylint = "^2.6.0"
safety = "^1.10.3"
autoflake = "^1.4"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
mkdocs-exclude = "^1.0.2"
mkdocstrings = "^0.13.6"
mkdocs-click = "^0.2.0"
markdown-include = "^0.6.0"
pymdown-extensions = "^8.0.1"
mkdocs-macros-plugin = "^0.5.0"

[tool.isort]
profile = "black"
force_single_line = false
force_grid_wrap = 2
multi_line_output = 3
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "cr_kyoushi"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
